# unijobs-backend

./: .gitignore  pyproject.toml  seed_db.py
src/: main.py
src/application/: apply_for_vacancy.py  get_employer_by_id.py  get_user_application_for_vacancy.py  get_user_applications.py  get_vacancies_by_filters.py  get_vacancy_by_id.py  update_application.py
src/application/common/: application_gateway.py  employer_gateway.py  interactor.py  vacancy_gateway.py
src/application/view_models/: application.py  employer.py  vacancy.py
src/domain/entity/: application.py  employer.py  vacancy.py
src/domain/exception/: application.py  base.py  employer.py  pagination.py  vacancy.py
src/domain/value_object/: application_status.py  employment_type.py  ids.py  language.py  workformat.py
src/infra/: di.py  idp.py
src/infra/adapters/database/: application_gateway.py  employer_gateway.py  models.py  transaction.py  vacancy_gateway.py
src/presentation/http/: app.py
src/presentation/http/dto/: application.py  vacancy.py
